--- a/src/client/components/landing-page/landing-page.component.css
+++ b/src/client/components/landing-page/landing-page.component.css
@@ -11,3 +11,99 @@
     src: url("/static/BentonSansMedium.eot?") format("embedded-opentype"), url("/static/BentonSansMedium.woff") format("woff"), url("/static/BentonSansMedium.ttf") format("truetype");
     font-weight: 500;
 }*/
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 101%;
+    width: 100%;
+    position: absolute;
+}
+
+.content-container {
+    height: 100%;
+    display: flex;
+}
+
+.right,
+.left {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.content1,
+.content2 {
+    position: absolute;
+}
+
+.content1.up,
+.content2.up {
+    top: -100%;
+    opacity: 0;
+    transition: opacity 0.6s ease-in, top 1s ease-in-out;
+}
+
+.content1.down,
+.content2.down {
+    top: 100%;
+    opacity: 0;
+    transition: opacity 0.6s ease-in, top 1s ease-in-out;
+}
+
+.content1.active,
+.content2.active {
+    top: 0;
+    opacity: 1;
+    transition: opacity 0.6s ease-in, top 1s ease-in-out;
+}
+
+.move-up {
+    opacity: 0;
+    top: -100%;
+    transition: opacity 0.6s ease-in, top 1s ease-in-out;
+}
+
+.move-down {
+    opacity: 0;
+    top: 100%;
+    transition: opacity 0.6s ease-in, top 1s ease-in-out;
+}
+
+.left .image {
+    height: 100%;
+    width: 100%;
+    background-image: url(/static/newborn1.jpg);
+    background-position: right bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.right .image {
+    height: 100vh;
+    width: 100%;
+    background-image: url(/static/newborn1.jpg);
+    background-position: left bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /*background-color: saddlebrown;*/
+}
+
+.description .line1 {
+    font-family: sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.line1,
+.line2,
+.line3 {
+    margin-bottom: 5px;
+}
+
+.btn-info {
+    color: inherit;
+    border-color: black;
+    background-color: white;
+}
