--- a/src/client/components/landing-page/landing-page.component.html
+++ b/src/client/components/landing-page/landing-page.component.html
@@ -1,2 +1,34 @@
-<header-bar></header-bar>
-<div>Hi</div>
+<div class="main-container" mouseWheel (mouseWheelUp)="onmousewheel('up')" (mouseWheelDown)="onmousewheel('down')">
+    <header-bar></header-bar>
+    <div class="row content-container">
+        <div class="col-md-6 left">
+            <!--<div class="left" [ngClass]="{'move-up': scrollDirection == 'up', 'move-down': scrollDirection == 'down'}">-->
+            <div class="image content1" [class.active]="activeContent == 1" [ngClass]="{'move-up': scrollDirection == 'up', 'move-down': scrollDirection == 'down', 'up': activeContent > 1, 'down': activeContent < 1 }"></div>
+            <div class="description col-md-8 content2" [class.active]="activeContent == 2" [ngClass]="{'move-up': scrollDirection == 'up', 'move-down': scrollDirection == 'down', 'up': activeContent > 2, 'down': activeContent < 2 }">
+                <div class="line1">WILLKOMMEN INS LEBEN2</div><br>
+                <div class="line2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                </div><br>
+                <div class="line3">
+                    <a href="" class="btn btn-info">Show more</a>
+                </div><br>
+            </div>
+            <!--</div>-->
+        </div>
+        <div class="col-md-6 right">
+            <!--<div class="right" [ngClass]="{'move-down': scrollDirection == 'up', 'move-up': scrollDirection == 'down'}">-->
+            <div class="description col-md-8 content1" [class.active]="activeContent == 1" [ngClass]="{'move-down': scrollDirection == 'up', 'move-up': scrollDirection == 'down', 'up': activeContent < 1, 'down': activeContent > 1}">
+                <div class="line1">WILLKOMMEN INS LEBEN</div><br>
+                <div class="line2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                </div><br>
+                <div class="line3">
+                    <a href="" class="btn btn-info">Show more</a>
+                </div><br>
+            </div>
+            <div class="image content2" [class.active]="activeContent == 2" [ngClass]="{'move-down': scrollDirection == 'up', 'move-up': scrollDirection == 'down', 'up': activeContent < 2, 'down': activeContent > 2}"></div>
+            <!--</div>-->
+        </div>
+    </div>
+    <div class=""></div>
+</div>
