--- a/src/client/components/landing-page/landing-page.component.css
+++ b/src/client/components/landing-page/landing-page.component.css
@@ -28,54 +28,78 @@
 .right,
 .left {
     height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    padding: 0;
 }
 
 .content1,
-.content2 {
+.content2,
+.content3 {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
 }
 
 .content1.up,
-.content2.up {
-    top: -100%;
+.content2.up,
+.content3.up {
+    top: -110%;
     opacity: 0;
     transition: opacity 0.6s ease-in, top 1s ease-in-out;
 }
 
 .content1.down,
-.content2.down {
+.content2.down,
+.content3.down {
     top: 100%;
     opacity: 0;
     transition: opacity 0.6s ease-in, top 1s ease-in-out;
 }
 
 .content1.active,
-.content2.active {
+.content2.active,
+.content3.active {
     top: 0;
     opacity: 1;
     transition: opacity 0.6s ease-in, top 1s ease-in-out;
 }
 
-.left .image {
-    height: 100%;
-    width: 100%;
+.content1.image {
+    background-image: url(/static/9months1.jpg);
+}
+
+.content2.image {
     background-image: url(/static/newborn1.jpg);
+}
+
+.content3.image {
+    background-image: url(/static/children1.jpg);
+}
+
+.image {
+    height: 100vh;
+    width: 100%;
     background-position: right bottom;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.right .image {
-    height: 100vh;
-    width: 100%;
-    background-image: url(/static/newborn1.jpg);
+.left .image {
     background-position: left bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    /*background-color: saddlebrown;*/
+}
+
+.description {
+    padding: 40px;
+}
+
+.left .description {
+    right: 0;
+    align-items: flex-end;
+}
+
+.left .description .line2 {
+    text-align: right;
 }
 
 .description .line1 {
