--- a/src/client/components/landing-page/landing-page.component.css
+++ b/src/client/components/landing-page/landing-page.component.css
@@ -12,12 +12,17 @@
     font-weight: 500;
 }*/
 
+body {
+    overflow: hidden;
+}
+
 .main-container {
     display: flex;
     flex-direction: column;
     height: 101%;
     width: 100%;
     position: absolute;
+    overflow: hidden;
 }
 
 .content-container {
