--- a/src/client/components/header-bar/header-bar.component.html
+++ b/src/client/components/header-bar/header-bar.component.html
@@ -4,9 +4,9 @@
         <div class="zeile2">FOTOGRAFIE</div>
     </div>
     <div class="navbar">
-        <a class="level1" [class.active]="isActive('Home')" href="">Home</a>
-        <a class="level1" [class.active]="isActive('Galleries')" href="">Galleries</a>
-        <a class="level1" [class.active]="isActive('About')" href="">About</a>
-        <a class="level1" [class.active]="isActive('More')" href="">More</a>
+        <a class="level1" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" href="">Home</a>
+        <a class="level1" routerLink="/gallery" routerLinkActive="active" href="">Galleries</a>
+        <a class="level1" routerLink="/about" routerLinkActive="active" href="">About</a>
+        <a class="level1" routerLink="/more" routerLinkActive="active" href="">More</a>
     </div>
 </div>
