--- a/src/client/components/header-bar/header-bar.component.css
+++ b/src/client/components/header-bar/header-bar.component.css
@@ -39,9 +39,25 @@ a:hover {
 
 .level1 {
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .level1.active,
 .level1:hover {
     border-bottom: solid 1px
+}
+
+.dropdown-menu {
+    min-width: 50px;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: none;
+    border: none;
+}
+
+.dropdown-menu-center {
+    left: -50px;
+    right: -50px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
