add logo; switch to angular4

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,27 +1,27 @@
 <div class="gallery-container" [@fadeInOut]="test">
   <div class="gallery-row">
     <div class="horizontal-lg">
-      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(/assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
+      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
       </div>
     </div>
   </div>
   <div class="gallery-row">
     <div class="square">
-      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(/assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
+      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
       </div>
     </div>
     <div class="square">
-      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(/assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
+      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
       </div>
     </div>
   </div>
   <div class="gallery-row">
     <div class="horizontal-sm">
-      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(/assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
+      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
       </div>
     </div>
     <div class="vertical">
-      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(/assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
+      <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
       </div>
     </div>
   </div>
