--- a/src/app/components/left-right/left-right.component.html
+++ b/src/app/components/left-right/left-right.component.html
@@ -6,7 +6,7 @@
                     [ngClass]="{'up': activeContent > i, 'down': activeContent < i }"></div>
             <div *ngIf="i % 2 != 0" class="description col-md-8 content" [class.active]="activeContent === i" [ngClass]="{'up': activeContent > i, 'down': activeContent < i }">
                 <div class="line1">{{c.title}}</div><br>
-                <div class="line2">{{c.description}}</div><br>
+                <div class="line2" [innerHTML]="c.description"></div><br>
                 <div class="line3" *ngIf="c.route || c.navigate">
                     <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
                     <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
@@ -20,7 +20,7 @@
                 [ngClass]="{'up': activeContent < i, 'down': activeContent > i }"></div>
         <div *ngIf="i % 2 == 0" class="description col-md-8 content" [class.active]="activeContent === i" [ngClass]="{'up': activeContent < i, 'down': activeContent > i }">
             <div class="line1">{{c.title}}</div><br>
-            <div class="line2">{{c.description}}</div><br>
+            <div class="line2" [innerHTML]="c.description"></div><br>
             <div class="line3" *ngIf="c.route || c.navigate">
                 <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
                 <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
