--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="gallery-container" [@fadeInOut]="test">
+<div class="gallery-container">
   <div class="gallery-row">
     <div class="horizontal-lg">
       <div *ngIf="galleryName" class="image" [ngStyle]="{ 'background-image': 'url(assets/'+galleryName+'/'+galleryName+ '_0.jpg)'}">
