--- a/src/app/components/header-bar/header-bar.component.html
+++ b/src/app/components/header-bar/header-bar.component.html
@@ -1,7 +1,6 @@
 <div class="main-container">
     <div class="logo">
-        <div class="zeile1">Leben pur</div>
-        <div class="zeile2">FOTOGRAFIE</div>
+        <div class="image"></div>
     </div>
     <div class="navbar">
         <a class="level1" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" href="">Home</a>
