--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,62 @@
 #root-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-    position: fixed;
-    width: 100%;
-    z-index: 1;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .main-content {
-    margin-top: 90px;
-    overflow: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
+  margin-top: 90px;
+  overflow: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.notready {
+  margin-top: 10%;
+}
+
+.logo>img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  width: 100%;
+}
+
+h2,
+.link {
+  text-align: center;
+  margin-top: 10px;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 18pt;
+  }
+}
+
+p {
+  font-size: 12pt;
+}
+
+a,
+a:hover,
+a:visited {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  margin: 10px;
+  margin-bottom: 50px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0
 }
