--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="root-container">
   <div class="container notready" *ngIf="host !== 'localhost'">
     <div class="row">
-      <div class="logo"><img src="/assets/logo.png" alt=""></div>
+      <div class="logo"><img src="assets/logo.png" alt=""></div>
       <h2>Paar, Neugeborenen &amp; Familien Lifestyle-Fotografie</h2>
       <br>
     </div>
