--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,17 +23,13 @@
 }
 
 .logo>img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
+  margin-left: -15px;
+  max-width: 350px;
   width: 100%;
 }
 
-h2,
-.link {
-  text-align: center;
-  margin-top: 10px;
+.bold {
+    font-weight: 600
 }
 
 @media (max-width: 768px) {
@@ -52,11 +48,6 @@ a:visited {
   cursor: pointer;
   text-decoration: none;
   color: inherit;
-  margin: 10px;
+  margin-right: 10px;
   margin-bottom: 50px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0
 }
