--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="root-container">
-  <!-- <div class="container notready" *ngIf="host !== 'localhost'"> -->
-  <div class="container notready">
+  <div class="container notready" *ngIf="host !== 'localhost'">
+    <!-- <div class="container notready"> -->
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
 
@@ -16,10 +16,15 @@
       <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">Shootingtermine gerne auf Anfrage: <br>
       </p>
       <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        <span class="bold">T</span> &nbsp; 07251 322 63 52 
+        <span class="bold">T</span> &nbsp; 07251 322 63 52
       </p>
       <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        <span class="bold">E</span> &nbsp; katrin<!-- @.d<  -->.kharitonov<!-- .@>  -->@<!-- .><@  -->gm<!-- .><@  -->ail.c<!-- ...!@.d<  -->om
+        <span class="bold">E</span> &nbsp; katrin
+        <!-- @.d<  -->.kharitonov
+        <!-- .@>  -->@
+        <!-- .><@  -->gm
+        <!-- .><@  -->ail.c
+        <!-- ...!@.d<  -->om
       </p>
     </div>
     <br>
@@ -44,11 +49,11 @@
       </div>
     </div>
   </div>
-<!-- 
+
   <div class="header" *ngIf="host === 'localhost'">
-    <header-bar></header-bar>
+    <app-header-bar></app-header-bar>
   </div>
   <div class="main-content" *ngIf="host === 'localhost'">
     <router-outlet></router-outlet>
-  </div> -->
+  </div>
 </div>
