--- a/src/app/components/header-bar/header-bar.component.css
+++ b/src/app/components/header-bar/header-bar.component.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: "Signerica";
-  /*src: url("assets/Signerica_Fat.ttf");*/
-  src: url("/assets/Signerica_Fat.ttf") format("truetype");
-  font-style: normal;
-}
-
-a,
-a:focus,
-a:hover {
-  text-decoration: none;
-  color: inherit;
-  outline: none;
-}
-
 .main-container {
   display: flex;
   height: 90px;
@@ -24,54 +9,32 @@ a:hover {
   background-color: white;
 }
 
-.logo{
+.logo {
   position: absolute;
   top: 0;
+  width: 100%;
 }
 
 .logo .image {
-  background-image: url("/assets/Logo.jpeg");
+  background-image: url("/assets/logo.png");
   height: 89px;
-  width: 269px;
+  width: 100%;
+  max-width: 150px;
   background-position: right bottom;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.zeile1 {
-  font-family: "Signerica";
-  font-style: normal;
-  font-size: 18pt;
-}
-
-.navbar {
-  align-items: center;
-  display: flex;
+app-navbar {
   margin-left: auto;
   position: relative;
 }
 
-.level1 {
-  margin: 0 10px;
-  cursor: pointer;
-}
-
-.level1.active,
-.level1:hover {
-  border-bottom: solid 1px
-}
-
-.dropdown-menu {
-  min-width: 50px;
-  background: rgba(255, 255, 255, 0.2);
-  box-shadow: none;
-  border: none;
-}
-
-.dropdown-menu-center {
-  left: -50px;
-  right: -50px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+@media(min-width: 768px) {
+  /* .mobile-collaps {
+    margin-left: 10px;
+  } */
+  .logo .image {
+    width: 269px;
+  }
 }
