--- a/src/app/components/left-right/left-right.component.html
+++ b/src/app/components/left-right/left-right.component.html
@@ -1,36 +1,37 @@
 <div class="main-container" mouseWheel (mouseWheelUp)="onMouseWheel('up')" (mouseWheelDown)="onMouseWheel('down')">
-    <div class="row content-container" [@fadeInOut]="true">
-        <div class="col-md-6 left">
-            <div *ngFor="let c of content; let i = index">
-                <div *ngIf="i % 2 == 0" class="image content" [class.active]="activeContent === i" [style.background-image]="getImage(c)"
-                    [ngClass]="{'up': activeContent > i, 'down': activeContent < i }"></div>
-            <div *ngIf="i % 2 != 0" class="description col-md-8 content" [class.active]="activeContent === i" [ngClass]="{'up': activeContent > i, 'down': activeContent < i }">
-                <div class="line1">{{c.title}}</div><br>
-                <div class="line2" [innerHTML]="c.description"></div><br>
-                <div class="line3" *ngIf="c.route || c.navigate">
-                    <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
-                    <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
-                </div><br>
-            </div>
+  <!-- <div class="row content-container" [@fadeInOut]="true"> -->
+  <div class="row content-container">
+    <div class="col-md-6 left">
+      <div *ngFor="let c of content; let i = index">
+        <div *ngIf="i % 2 == 0" class="image content" [class.active]="activeContent === i" [style.background-image]="getImage(c)"
+          [ngClass]="{'up': activeContent > i, 'down': activeContent < i }"></div>
+        <div *ngIf="i % 2 != 0" class="description col-md-8 content" [class.active]="activeContent === i" [ngClass]="{'up': activeContent > i, 'down': activeContent < i }">
+          <div class="line1">{{c.title}}</div><br>
+          <div class="line2" [innerHTML]="c.description"></div><br>
+          <div class="line3" *ngIf="c.route || c.navigate">
+            <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
+            <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
+          </div><br>
         </div>
+      </div>
     </div>
     <div class="col-md-6 right">
-        <div *ngFor="let c of content; let i = index">
-            <div *ngIf="i % 2 != 0" class="image content" [class.active]="activeContent === i" [style.background-image]="getImage(c)"
-                [ngClass]="{'up': activeContent < i, 'down': activeContent > i }"></div>
+      <div *ngFor="let c of content; let i = index">
+        <div *ngIf="i % 2 != 0" class="image content" [class.active]="activeContent === i" [style.background-image]="getImage(c)"
+          [ngClass]="{'up': activeContent < i, 'down': activeContent > i }"></div>
         <div *ngIf="i % 2 == 0" class="description col-md-8 content" [class.active]="activeContent === i" [ngClass]="{'up': activeContent < i, 'down': activeContent > i }">
-            <div class="line1">{{c.title}}</div><br>
-            <div class="line2" [innerHTML]="c.description"></div><br>
-            <div class="line3" *ngIf="c.route || c.navigate">
-                <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
-                <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
-            </div><br>
+          <div class="line1">{{c.title}}</div><br>
+          <div class="line2" [innerHTML]="c.description"></div><br>
+          <div class="line3" *ngIf="c.route || c.navigate">
+            <a *ngIf="c.route" routerLink="{{c.route}}" class="btn btn-info">Show more</a>
+            <a *ngIf="c.navigate" (click)="activeContent = c.navigate" class="btn btn-info">Show more</a>
+          </div><br>
         </div>
+      </div>
     </div>
-</div>
-</div>
-<div class="dots">
+  </div>
+  <div class="dots">
     <i class="fa" aria-hidden="true" *ngFor="let c of content; let i = index" [ngClass]="{'fa-circle-o': activeContent !== i, 'fa-circle': activeContent === i, 'white': activeContent%2 }"
-        (click)="activeContent = i"></i>
-</div>
+      (click)="activeContent = i"></i>
+  </div>
 </div>
