contact formular added

--- a/src/app/components/left-right/left-right.component.html
+++ b/src/app/components/left-right/left-right.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" mouseWheel (mouseWheelUp)="onMouseWheel('up')" (mouseWheelDown)="onMouseWheel('down')">
+<div class="main-container container" mouseWheel (mouseWheelUp)="onMouseWheel('up')" (mouseWheelDown)="onMouseWheel('down')">
   <!-- <div class="row content-container" [@fadeInOut]="true"> -->
   <div class="row content-container">
     <div class="col-md-6 left">
