--- a/src/app/components/header-bar/header-bar.component.css
+++ b/src/app/components/header-bar/header-bar.component.css
@@ -11,15 +11,14 @@
 
 .logo {
   position: absolute;
-  top: 0;
+  /* top: 0; */
   width: 100%;
 }
 
 .logo .image {
   background-image: url("/assets/logo.png");
-  height: 89px;
-  width: 100%;
-  max-width: 150px;
+  height: 50px;
+  width: 150px;
   background-position: right bottom;
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,7 +33,11 @@ app-navbar {
   /* .mobile-collaps {
     margin-left: 10px;
   } */
+  .logo {
+    top: 0
+  }
   .logo .image {
     width: 269px;
+    height: 89px;
   }
 }
