--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,65 @@
 <div id="root-container">
-  <div class="container notready" *ngIf="host !== 'localhost'">
-    <!-- <div class="container notready"> -->
-    <div class="row">
-      <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+    <div class="container notready" *ngIf="1 === 2">
+        <!-- <div class="container notready" *ngIf="host !== 'localhost'"> -->
+        <!-- <div class="container notready"> -->
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
 
-        <div class="logo"><img src="assets/logo.png" alt=""></div>
+                <div class="logo">
+                    <img src="assets/logo.png" alt="">
+                </div>
+                <br>
+                <br>
+                <h4>Paar, Neugeborenen &amp; Familien Lifestyle-Fotografie</h4>
+            </div>
+        </div>
         <br>
         <br>
-        <h4>Paar, Neugeborenen &amp; Familien Lifestyle-Fotografie</h4>
-      </div>
+        <div class="row">
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">Shootingtermine gerne auf Anfrage:
+                <br>
+            </p>
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+                <span class="bold">T</span> &nbsp; 07251 322 63 52
+            </p>
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+                <span class="bold">E</span> &nbsp; katrin
+                <!-- @.d<  -->.kharitonov
+                <!-- .@>  -->@
+                <!-- .><@  -->gm
+                <!-- .><@  -->ail.c
+                <!-- ...!@.d<  -->om
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+                Schön, dass du hier bist!
+            </p>
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+                Meine Website befindet sich gerade im Aufbau. In ein paar Monaten gibt es hier mehr zu sehen. Wiederkommen lohnt sich!
+            </p>
+            <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
+                Lass uns bis dahin in Verbindung bleiben!
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 link">
+                <a href="https://www.facebook.com/Leben-Pur-Fotografie-1793261230989815/" class="fa fa-facebook-square fa-2x"></a>
+                <a href="https://www.instagram.com/katrinkharitonov/" class="fa fa-instagram fa-2x"></a>
+            </div>
+        </div>
     </div>
-    <br>
-    <br>
-    <div class="row">
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">Shootingtermine gerne auf Anfrage: <br>
-      </p>
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        <span class="bold">T</span> &nbsp; 07251 322 63 52
-      </p>
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        <span class="bold">E</span> &nbsp; katrin
-        <!-- @.d<  -->.kharitonov
-        <!-- .@>  -->@
-        <!-- .><@  -->gm
-        <!-- .><@  -->ail.c
-        <!-- ...!@.d<  -->om
-      </p>
-    </div>
-    <br>
-    <br>
-    <div class="row">
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        Schön, dass du hier bist!
-      </p>
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        Meine Website befindet sich gerade im Aufbau. In ein paar Monaten gibt es hier mehr zu sehen. Wiederkommen lohnt sich!
-      </p>
-      <p class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
-        Lass uns bis dahin in Verbindung bleiben!
-      </p>
-    </div>
-    <br>
-    <br>
-    <div class="row">
-      <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 link">
-        <a href="https://www.facebook.com/Leben-Pur-Fotografie-1793261230989815/" class="fa fa-facebook-square fa-2x"></a>
-        <a href="https://www.instagram.com/katrinkharitonov/" class="fa fa-instagram fa-2x"></a>
-      </div>
-    </div>
-  </div>
 
-  <div class="header" *ngIf="host === 'localhost'">
-    <app-header-bar></app-header-bar>
-  </div>
-  <div class="main-content" *ngIf="host === 'localhost'">
-    <router-outlet></router-outlet>
-  </div>
+    <!-- <div class="header" *ngIf="host === 'localhost'"> -->
+    <div class="header" *ngIf="true">
+        <app-header-bar></app-header-bar>
+    </div>
+    <!-- <div class="main-content" *ngIf="host === 'localhost'"> -->
+    <div class="main-content" *ngIf="true">
+        <router-outlet></router-outlet>
+    </div>
 </div>
